# infra

./: .gitignore  README.md  pyproject.toml  requirements.txt
01_pretrain_toy/: 01_tokenizer.ipynb  02_data_pipeline.ipynb  03_nano_decoder.ipynb  04_train_loop.ipynb  README.md
02_data/: 01_cc_cleaning.ipynb  02_dedup_minhash.ipynb  README.md
02_sft/: 01_dataset_alpaca_zh.ipynb  03_lora_sft.ipynb  04_qlora_3b.ipynb  README.md
03_alignment/: 03_grpo_deepseek_style.ipynb  README.md
03_eval/: 01_lm_eval_harness.ipynb  02_cmmlu_ceval_zh.ipynb  README.md
04_inference_deploy/: 02_vllm_paged_attention.ipynb  03_gptq_quantize.ipynb  04_llama_cpp_gguf.ipynb  README.md
04_midtrain/: 01_smoltalk_zh_injection.ipynb  README.md
05_sft/: 01_dataset_alpaca_zh.ipynb  02_full_param_sft_liger.ipynb  03_unsloth_lora.ipynb  README.md
06_alignment/: 01_dpo_理论.ipynb  02_dpo_unsloth.ipynb  03_grpo_verifiable_reward.ipynb  README.md
07_systems/: 01_triton_flashattn2_mini.ipynb  02_torchrun_ddp_demo.ipynb  03_fsdp_demo.ipynb  04_pipeline_parallel.md  README.md
08_inference_deploy/: 01_hf_baseline.ipynb  03_speculative_decoding.ipynb  06_tensorrt_llm_intro.md  README.md
09_capstone/: README.md  mini_r1_gsm8k_zh.ipynb
docs/: _index.md  与llm-action八股对照.md  学习路径.md  工具栈选型.md  硬件与环境.md
scripts/: download_datasets.py  download_models.py  env_check.py
tests/: smoke_train_step.py
